# FastApi_Postgres

./: .env  .gitignore  Dockerfile.postgres  Dockerfile.python  alembic.ini  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
alembic/versions/: d4900adaa1fa_create_account_table.py
py_fastapi/: pyvenv.cfg
py_script/: api.py  backend.py  example_1.py  models.py  test_sql.py
py_script/templates/: query_template.j2
